--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
     background-size: cover;
     background-position: left 10% bottom 20%;
     background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box;
     width: 100%;
     height: 528px;
     padding: 10px;
@@ -19,7 +21,7 @@
     color: white;
     font-family: "Anton", sans-serif;
     position: absolute;
-    bottom: 15%;
+    bottom: 5%;
     left: 3%;
 }
 
